src/App.css
.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

/* @keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
} */

.demoOuterWrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  margin-bottom: 30px;
}
.demoWrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 20px;
  width: 300px;
  margin-right: 10px;
  /* border: 1px red dotted; */
}
.demoValueDisplay,
.demoAxesButtonDisplay {
  margin-top: 10px;
}

.demoWrapperDivStyles {
  background-color: #e0e0e0;
  padding: 20px;
  width: 300px;
}

#rangeHighlightsSlider .slider-rangeHighlight {
  background: #f70616;
}

